--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,10 @@
   <artifactId>jenkinsProject</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>jenkinsProject</name>
+  <properties>
+   <maven.compiler.source>1.8</maven.compiler.source>
+   <maven.compiler.target>1.8</maven.compiler.target>
+</properties>
   <build>
  	<finalName>jenkinsProject</finalName>
   </build>
